# chordless

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  NoteState.cpp  NoteState.hpp  README.md  coverage_summary.sh  logging.cpp  logging.h  main.cc  main.cpp  new_ui.qml  note_event.cc  note_event.h  note_input.h  note_name.cc  note_name.h  note_observer.h  note_reader.cc  note_reader.h  note_state.cc  note_state.h  test_note_event.cc  test_note_name.cc  test_note_state.cc  ui.qml
.github/workflows/: cmake-single-platform.yml
alsa/: CMakeLists.txt  alsa_input.cc  alsa_input.h
chord/: CMakeLists.txt  chord.h  chord_matcher.cc  chord_matcher.h  chord_matcher_config.h  chord_matcher_config_factory.cc  chord_matcher_config_factory.h  chord_matcher_reader.cc  chord_matcher_reader.h  chord_observer.cc  chord_observer.h  chord_pattern.h  config.json  test_chord_matcher.cc  test_chord_matcher_config_factory.cc  test_chord_observer.cc
input/: CMakeLists.txt  note_input.h
input/alsa/: CMakeLists.txt  alsa_input.cc  alsa_input.h
note/: CMakeLists.txt  basic_note_namer.cc  basic_note_namer.h  full_voicing_observer.cc  full_voicing_observer.h  note_constant.h  note_event.cc  note_event.h  note_name.cc  note_name.h  note_namer.h  note_observer.cc  note_observer.h  note_reader.cc  note_reader.h  note_state.cc  note_state.h  scientific_note_namer.cc  scientific_note_namer.h  test_basic_note_namer.cc  test_full_voicing_observer.cc  test_note_event.cc  test_note_name.cc  test_note_state.cc  test_scientific_note_namer.cc
notespew/: CMakeLists.txt  README.md  notespew.cc  spew-notes.sh
settings/: CMakeLists.txt  settings.cc  settings.h
ui/: CMakeLists.txt  chord_label.cc  chord_label.h  text_setter.h
ui/mock/: mock_text_setter.h
