add_library(chord_matcher chord_matcher.cc chord_matcher.h chord_matcher_config.h)
target_link_libraries(chord_matcher basic_note_namer)

add_executable(test_chord_matcher test_chord_matcher.cc)
target_link_libraries(test_chord_matcher gtest_main chord_matcher chord_matcher_config_factory note_state)
add_test(NAME chord_matcher_test COMMAND test_chord_matcher)


add_library(chord_matcher_config_factory chord_matcher_config_factory.cc chord_matcher_config_factory.h chord_matcher_config.h)

add_executable(test_chord_matcher_config_factory test_chord_matcher_config_factory.cc)
target_link_libraries(test_chord_matcher_config_factory gtest_main chord_matcher_config_factory)
add_test(NAME chord_matcher_config_factory_test COMMAND test_chord_matcher_config_factory)


add_library(chord_observer chord_observer.cc chord_observer.h)

add_executable(test_chord_observer test_chord_observer.cc ../ui/mock/mock_text_setter.h)
target_link_libraries(test_chord_observer gtest_main chord_observer note_state chord_matcher chord_matcher_config_factory)
add_test(NAME chord_observer_test COMMAND test_chord_observer)
